[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/soul.png" type="Texture" id=1]
[ext_resource path="res://Soul.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 384.0

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[node name="Soul" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="soul" type="Sprite" parent="TextureRect"]
position = Vector2( 1.90735e-06, -1.90735e-06 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="DetectingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectingArea"]
shape = SubResource( 2 )

[node name="ConsumingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConsumingArea"]
shape = SubResource( 3 )
[connection signal="body_entered" from="DetectingArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="DetectingArea" to="." method="_on_DetectingArea_body_exited"]
[connection signal="body_entered" from="ConsumingArea" to="." method="_on_ConsumingArea_body_entered"]
